# redmine-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/redmine_core/: cli.py  client.py  config.py  detect.py  frontmatter.py  paths.py  render.py
