[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redmine-core"
version = "0.1.0"
description = "Thin CLI for Redmine, designed as the backend for redmine.nvim"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
redmine = "redmine_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["redmine_core*"]
